fix(style): large table overflows on mobile screen sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,8 @@ footer .copyright-notice {
 
 table {
 	border-collapse: collapse;
+	overflow-x: auto;
+	display: block;
 }
 
 table > caption {
